Update color class names

--- a/demo.html
+++ b/demo.html
@@ -221,7 +221,7 @@
         </style>
     </head>
     <body>
-        <header id="top" class="nq-blue-bg">
+        <header id="top" class="nq-indigo-bg">
             <h1 class="nq-h1">Nimiq Style</h1>
             <p class="nq-label">The Nimiq CSS framework</p>
         </header>
@@ -313,49 +313,49 @@
                         <h1 class="nq-h1"><a href="#colors">Colors</a></h1>
                     </div>
                     <div class="nq-card-body text-colors">
+                        <p class="nq-indigo">Nimiq Indigo</p>
                         <p class="nq-blue">Nimiq Blue</p>
-                        <p class="nq-light-blue">Nimiq Light Blue</p>
-                        <p class="nq-gold">Nimiq Gold</p>
-                        <p class="nq-green">Nimiq Green</p>
+                        <p class="nq-yellow">Nimiq Yellow</p>
+                        <p class="nq-teal">Nimiq Teal</p>
                         <p class="nq-orange">Nimiq Orange</p>
                         <p class="nq-red">Nimiq Red</p>
                         <p class="nq-purple">Nimiq Purple</p>
                         <p class="nq-pink">Nimiq Pink</p>
-                        <p class="nq-light-green">Nimiq Light Green</p>
+                        <p class="nq-green">Nimiq Green</p>
                         <p class="nq-brown">Nimiq Brown</p>
 
-                        <div class="nq-blue-bg rounded-padding">
-                            <p class="nq-light-blue">Nimiq Light Blue</p>
+                        <div class="nq-indigo-bg rounded-padding">
+                            <p class="nq-blue">Nimiq Blue</p>
                             <p class="nq-red">Nimiq Red</p>
                         </div>
                     </div>
 
-                    <div class="code">&lt;p class="<b>nq-blue</b>">Nimiq Blue&lt;/p>
-&lt;p class="<b>nq-light-blue</b>">Nimiq Light Blue&lt;/p>
-&lt;p class="<b>nq-gold</b>">Nimiq Gold&lt;/p>
-&lt;p class="<b>nq-green</b>">Nimiq Green&lt;/p>
+                    <div class="code">&lt;p class="<b>nq-indigo</b>">Nimiq Indigo&lt;/p>
+&lt;p class="<b>nq-blue</b>">Nimiq Blue&lt;/p>
+&lt;p class="<b>nq-yellow</b>">Nimiq Yellow&lt;/p>
+&lt;p class="<b>nq-teal</b>">Nimiq Teal&lt;/p>
 &lt;p class="<b>nq-orange</b>">Nimiq Orange&lt;/p>
 &lt;p class="<b>nq-red</b>">Nimiq Red&lt;/p>
 &lt;p class="<b>nq-purple</b>">Nimiq Purple&lt;/p>
 &lt;p class="<b>nq-pink</b>">Nimiq Pink&lt;/p>
-&lt;p class="<b>nq-light-green</b>">Nimiq Light Green&lt;/p>
+&lt;p class="<b>nq-green</b>">Nimiq Green&lt;/p>
 &lt;p class="<b>nq-brown</b>">Nimiq Brown&lt;/p></div>
 
                     <div class="nq-card-body background-colors">
+                        <div class="color-swatch nq-indigo-bg">
+                            Indigo<br><br><br>
+                        </div>
+
                         <div class="color-swatch nq-blue-bg">
                             Blue<br><br><br>
                         </div>
 
-                        <div class="color-swatch nq-light-blue-bg">
-                            Light-Blue<br><br><br>
+                        <div class="color-swatch nq-yellow-bg">
+                            Yellow<br><br><br>
                         </div>
 
-                        <div class="color-swatch nq-gold-bg">
-                            Gold<br><br><br>
-                        </div>
-
-                        <div class="color-swatch nq-green-bg">
-                            Green<br><br><br>
+                        <div class="color-swatch nq-teal-bg">
+                            Teal<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-orange-bg">
@@ -374,8 +374,8 @@
                             Pink<br><br><br>
                         </div>
 
-                        <div class="color-swatch nq-light-green-bg">
-                            Light-Green<br><br><br>
+                        <div class="color-swatch nq-green-bg">
+                            Green<br><br><br>
                         </div>
 
                         <div class="color-swatch nq-brown-bg">
@@ -383,15 +383,15 @@
                         </div>
                     </div>
 
-                    <div class="code">&lt;div class="<b>nq-blue-bg</b>">Blue&lt;/div>
-&lt;div class="<b>nq-light-blue-bg</b>">Light-Blue&lt;/div>
-&lt;div class="<b>nq-gold-bg</b>">Gold&lt;/div>
-&lt;div class="<b>nq-green-bg</b>">Green&lt;/div>
+                    <div class="code">&lt;div class="<b>nq-indigo-bg</b>">Indigo&lt;/div>
+&lt;div class="<b>nq-blue-bg</b>">Blue&lt;/div>
+&lt;div class="<b>nq-yellow-bg</b>">Yellow&lt;/div>
+&lt;div class="<b>nq-teal-bg</b>">Teal&lt;/div>
 &lt;div class="<b>nq-orange-bg</b>">Orange&lt;/div>
 &lt;div class="<b>nq-red-bg</b>">Red&lt;/div>
 &lt;div class="<b>nq-purple-bg</b>">Purple&lt;/div>
 &lt;div class="<b>nq-pink-bg</b>">Pink&lt;/div>
-&lt;div class="<b>nq-light-green-bg</b>">Light-Green&lt;/div>
+&lt;div class="<b>nq-green-bg</b>">Green&lt;/div>
 &lt;div class="<b>nq-brown-bg</b>">Brown&lt;/div></div>
                 </div>
 
@@ -404,9 +404,9 @@
                         <button class="nq-button">Regular button</button>
                         <button class="nq-button">Button with lots of text</button>
                         <button class="nq-button" disabled>Disabled button</button>
-                        <div class="nq-light-blue-bg rounded-padding">
-                            <button class="nq-button light-blue inverse">Inverse button</button>
-                            <button class="nq-button light-blue inverse" disabled>Inverse disabled</button>
+                        <div class="nq-blue-bg rounded-padding">
+                            <button class="nq-button blue inverse">Inverse button</button>
+                            <button class="nq-button blue inverse" disabled>Inverse disabled</button>
                         </div>
                     </div>
 
@@ -415,18 +415,18 @@
 &lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button>
 &lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button>
 
-&lt;button class="<b>nq-button inverse</b>">Inverse button&lt;/button>
-&lt;button class="<b>nq-button inverse</b>" <b>disabled</b>>Inverse button&lt;/button></div>
+&lt;button class="<b>nq-button blue inverse</b>">Inverse button&lt;/button>
+&lt;button class="<b>nq-button blue inverse</b>" <b>disabled</b>>Inverse button&lt;/button></div>
 
                     <div class="nq-card-body primary-buttons">
-                        <button class="nq-button light-blue">Light-blue button</button>
-                        <button class="nq-button green">Green button</button>
+                        <button class="nq-button blue">Blue button</button>
+                        <button class="nq-button teal">Teal button</button>
                         <button class="nq-button orange">Orange button</button>
                         <button class="nq-button red">Red button</button>
                     </div>
 
-                    <div class="code">&lt;button class="<b>nq-button light-blue</b>">Light-blue button&lt;/button>
-&lt;button class="<b>nq-button green</b>">Green button&lt;/button>
+                    <div class="code">&lt;button class="<b>nq-button blue</b>">Blue button&lt;/button>
+&lt;button class="<b>nq-button teal</b>">Teal button&lt;/button>
 &lt;button class="<b>nq-button orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button red</b>">Red button&lt;/button></div>
                 </div>
@@ -440,12 +440,12 @@
                         <button class="nq-button-s" disabled>Disabled small button</button><br>
                         <br>
                         <br>
-                        <button class="nq-button-s light-blue">Light-blue button</button>
-                        <button class="nq-button-s green">Green button</button>
+                        <button class="nq-button-s blue">Blue button</button>
+                        <button class="nq-button-s teal">Teal button</button>
                         <button class="nq-button-s orange">Orange button</button>
                         <button class="nq-button-s red">Red button</button><br>
-                        <button class="nq-button-s light-blue" disabled>Light-blue button</button>
-                        <button class="nq-button-s green" disabled>Green button</button>
+                        <button class="nq-button-s blue" disabled>Blue button</button>
+                        <button class="nq-button-s teal" disabled>Teal button</button>
                         <button class="nq-button-s orange" disabled>Orange button</button>
                         <button class="nq-button-s red" disabled>Red button</button>
                     </div>
@@ -453,13 +453,13 @@
                     <div class="code">&lt;button class="<b>nq-button-s</b>">Small button&lt;/button>
 &lt;button class="<b>nq-button-s</b>" <b>disabled</b>>Disabled small button&lt;/button>
 
-&lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
-&lt;button class="<b>nq-button-s green</b>">Green button&lt;/button>
+&lt;button class="<b>nq-button-s blue</b>">Blue button&lt;/button>
+&lt;button class="<b>nq-button-s teal</b>">Teal button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>">Red button&lt;/button>
 
-&lt;button class="<b>nq-button-s light-blue</b>" <b>disabled</b>>Light-blue button&lt;/button>
-&lt;button class="<b>nq-button-s green</b>" <b>disabled</b>>Green button&lt;/button>
+&lt;button class="<b>nq-button-s blue</b>" <b>disabled</b>>Blue button&lt;/button>
+&lt;button class="<b>nq-button-s teal</b>" <b>disabled</b>>Teal button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>" <b>disabled</b>>Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>" <b>disabled</b>>Red button&lt;/button></div>
                 </div><!-- .nq-card -->
@@ -491,7 +491,7 @@
                         </div>
 
                         <div class="nq-card-body">
-                            <div class="nq-blue-bg rounded-padding">
+                            <div class="nq-indigo-bg rounded-padding">
                                 <h2 class="nq-h2">On dark background</h2>
                                 <input class="nq-input"><br>
                                 <br>
@@ -619,7 +619,7 @@
                         <div class="hint" aria-label="nq-ledger"><svg class="nq-icon ledger"><use xlink:href="./nimiq-style.icons.svg#nq-ledger"/></svg></div>
                     </div>
 
-                    <div class="nq-card-body nq-blue-bg icons">
+                    <div class="nq-card-body nq-indigo-bg icons">
                         <div class="hint" aria-label="nq-arrow-left"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-left-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left-small"/></svg></div>
