Add nimiq gold button

--- a/demo.html
+++ b/demo.html
@@ -421,12 +421,15 @@
                         <button class="nq-button green">Green button</button>
                         <button class="nq-button orange">Orange button</button>
                         <button class="nq-button red">Red button</button>
+                        <button class="nq-button gold">Gold button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button light-blue</b>">Light-blue button&lt;/button>
 &lt;button class="<b>nq-button green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button orange</b>">Orange button&lt;/button>
-&lt;button class="<b>nq-button red</b>">Red button&lt;/button></div>
+&lt;button class="<b>nq-button red</b>">Red button&lt;/button>
+&lt;button class="<b>nq-button gold</b>">Gold button&lt;/button>
+                    </div>
                 </div>
 
                 <div class="nq-card" id="small-buttons">
@@ -455,11 +458,13 @@
                         <button class="nq-button-s green">Green button</button>
                         <button class="nq-button-s orange">Orange button</button>
                         <button class="nq-button-s red">Red button</button><br>
+                        <button class="nq-button-s gold">Gold button</button><br>
                         <br>
                         <button class="nq-button-s light-blue" disabled>Light-blue button</button>
                         <button class="nq-button-s green" disabled>Green button</button>
                         <button class="nq-button-s orange" disabled>Orange button</button>
                         <button class="nq-button-s red" disabled>Red button</button>
+                        <button class="nq-button-s gold" disabled>Gold button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
