--- a/demo.html
+++ b/demo.html
@@ -185,10 +185,6 @@
                 padding: 2rem;
             }
 
-            .small-buttons .nq-button-s:not(:first-child) {
-                margin-top: 1rem;
-            }
-
             .icons {
                 font-size: 5rem;
             }
@@ -242,6 +238,7 @@
                     <li><a class="nq-link" href="#colors">Colors</a></li>
                     <li><a class="nq-link" href="#primary-buttons">Primary Buttons</a></li>
                     <li><a class="nq-link" href="#small-buttons">Small Buttons</a></li>
+                    <li><a class="nq-link" href="#pill-buttons">Pill Buttons</a></li>
                     <li><a class="nq-link" href="#inputs">Inputs</a></li>
                     <li><a class="nq-link" href="#card-component">Card Component</a></li>
                     <li><a class="nq-link" href="#icons">Icons</a></li>
@@ -404,6 +401,7 @@
                         <button class="nq-button">Regular button</button>
                         <button class="nq-button">Button with lots of text</button>
                         <button class="nq-button" disabled>Disabled button</button>
+
                         <div class="nq-light-blue-bg rounded-padding">
                             <button class="nq-button light-blue inverse">Inverse button</button>
                             <button class="nq-button light-blue inverse" disabled>Inverse disabled</button>
@@ -415,8 +413,8 @@
 &lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button>
 &lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button>
 
-&lt;button class="<b>nq-button inverse</b>">Inverse button&lt;/button>
-&lt;button class="<b>nq-button inverse</b>" <b>disabled</b>>Inverse button&lt;/button></div>
+&lt;button class="<b>nq-button light-blue inverse</b>">Inverse button&lt;/button>
+&lt;button class="<b>nq-button light-blue inverse</b>" <b>disabled</b>>Inverse button&lt;/button></div>
 
                     <div class="nq-card-body primary-buttons">
                         <button class="nq-button light-blue">Light-blue button</button>
@@ -435,25 +433,36 @@
                     <div class="nq-card-header">
                         <h1 class="nq-h1"><a href="#small-buttons">Small Buttons</a></h1>
                     </div>
-                    <div class="nq-card-body small-buttons">
+                    <div class="nq-card-body">
                         <button class="nq-button-s">Small button</button>
                         <button class="nq-button-s" disabled>Disabled small button</button><br>
                         <br>
                         <br>
+                        <div class="nq-blue-bg rounded-padding">
+                            <button class="nq-button-s inverse">Inverse small button</button>
+                            <button class="nq-button-s inverse" disabled>Inverse disabled</button><br>
+                        </div>
+                    </div>
+
+                    <div class="code">&lt;button class="<b>nq-button-s</b>">Small button&lt;/button>
+&lt;button class="<b>nq-button-s</b>" <b>disabled</b>>Disabled small button&lt;/button>
+
+&lt;button class="<b>nq-button-s inverse</b>">Inverse small button&lt;/button>
+&lt;button class="<b>nq-button-s inverse</b>" <b>disabled</b>>Inverse disabled&lt;/button></div>
+
+                    <div class="nq-card-body">
                         <button class="nq-button-s light-blue">Light-blue button</button>
                         <button class="nq-button-s green">Green button</button>
                         <button class="nq-button-s orange">Orange button</button>
                         <button class="nq-button-s red">Red button</button><br>
+                        <br>
                         <button class="nq-button-s light-blue" disabled>Light-blue button</button>
                         <button class="nq-button-s green" disabled>Green button</button>
                         <button class="nq-button-s orange" disabled>Orange button</button>
                         <button class="nq-button-s red" disabled>Red button</button>
                     </div>
 
-                    <div class="code">&lt;button class="<b>nq-button-s</b>">Small button&lt;/button>
-&lt;button class="<b>nq-button-s</b>" <b>disabled</b>>Disabled small button&lt;/button>
-
-&lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
+                    <div class="code">&lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
 &lt;button class="<b>nq-button-s green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>">Red button&lt;/button>
@@ -462,6 +471,39 @@
 &lt;button class="<b>nq-button-s green</b>" <b>disabled</b>>Green button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>" <b>disabled</b>>Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>" <b>disabled</b>>Red button&lt;/button></div>
+                </div><!-- .nq-card -->
+
+                <div class="nq-card" id="pill-buttons">
+                    <div class="nq-card-header">
+                        <h1 class="nq-h1"><a href="#pill-buttons">Pill Buttons</a></h1>
+                    </div>
+                    <div class="nq-card-body">
+                        <button class="nq-button-pill">Pill button</button><br>
+                        <br>
+                        <button class="nq-button-pill light-blue">Light-blue button</button>
+                        <button class="nq-button-pill green">Green button</button>
+                        <button class="nq-button-pill orange">Orange button</button>
+                        <button class="nq-button-pill red">Red button</button><br>
+                        <br>
+                        <div class="nq-blue-bg nq-shadow-l rounded-padding">
+                            <button class="nq-button-pill light-blue inverse">Inverse pill button</button>
+                            <button class="nq-button-pill green inverse">Green button</button>
+                            <button class="nq-button-pill orange inverse">Orange button</button>
+                            <button class="nq-button-pill red inverse">Red button</button>
+                        </div>
+                    </div>
+
+                    <div class="code">&lt;button class="<b>nq-button-pill</b>">Pill button&lt;/button>
+
+&lt;button class="<b>nq-button-pill light-blue</b>">Light-blue button&lt;/button>
+&lt;button class="<b>nq-button-pill green</b>">Green button&lt;/button>
+&lt;button class="<b>nq-button-pill orange</b>">Orange button&lt;/button>
+&lt;button class="<b>nq-button-pill red</b>">Red button&lt;/button>
+
+&lt;button class="<b>nq-button-pill light-blue inverse</b>">Inverse pill button&lt;/button>
+&lt;button class="<b>nq-button-pill green inverse</b>">Green button&lt;/button>
+&lt;button class="<b>nq-button-pill orange inverse</b>">Orange button&lt;/button>
+&lt;button class="<b>nq-button-pill red inverse</b>">Red button&lt;/button></div>
                 </div><!-- .nq-card -->
 
                 <div class="nq-card" id="inputs">
