Remove gold small buttons, add gold pill style

--- a/demo.html
+++ b/demo.html
@@ -185,6 +185,11 @@
                 padding: 2rem;
             }
 
+            #small-buttons .nq-button-s,
+            #pill-buttons .nq-button-pill {
+                margin-bottom: 0.75rem;
+            }
+
             .icons {
                 font-size: 5rem;
             }
@@ -428,8 +433,7 @@
 &lt;button class="<b>nq-button green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button red</b>">Red button&lt;/button>
-&lt;button class="<b>nq-button gold</b>">Gold button&lt;/button>
-                    </div>
+&lt;button class="<b>nq-button gold</b>">Gold button&lt;/button></div>
                 </div>
 
                 <div class="nq-card" id="small-buttons">
@@ -458,13 +462,11 @@
                         <button class="nq-button-s green">Green button</button>
                         <button class="nq-button-s orange">Orange button</button>
                         <button class="nq-button-s red">Red button</button><br>
-                        <button class="nq-button-s gold">Gold button</button><br>
                         <br>
                         <button class="nq-button-s light-blue" disabled>Light-blue button</button>
                         <button class="nq-button-s green" disabled>Green button</button>
                         <button class="nq-button-s orange" disabled>Orange button</button>
                         <button class="nq-button-s red" disabled>Red button</button>
-                        <button class="nq-button-s gold" disabled>Gold button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
@@ -488,13 +490,16 @@
                         <button class="nq-button-pill light-blue">Light-blue button</button>
                         <button class="nq-button-pill green">Green button</button>
                         <button class="nq-button-pill orange">Orange button</button>
-                        <button class="nq-button-pill red">Red button</button><br>
+                        <button class="nq-button-pill red">Red button</button>
+                        <button class="nq-button-pill gold">Gold button</button><br>
                         <br>
                         <div class="nq-blue-bg nq-shadow-l rounded-padding">
-                            <button class="nq-button-pill light-blue inverse">Inverse pill button</button>
+                            <button class="nq-button-pill inverse">Inverse button</button>
+                            <button class="nq-button-pill light-blue inverse">Light-blue button</button>
                             <button class="nq-button-pill green inverse">Green button</button>
                             <button class="nq-button-pill orange inverse">Orange button</button>
                             <button class="nq-button-pill red inverse">Red button</button>
+                            <button class="nq-button-pill gold inverse">Gold button</button>
                         </div>
                     </div>
 
@@ -504,11 +509,14 @@
 &lt;button class="<b>nq-button-pill green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button-pill orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button-pill red</b>">Red button&lt;/button>
+&lt;button class="<b>nq-button-pill gold</b>">Gold button&lt;/button>
 
-&lt;button class="<b>nq-button-pill light-blue inverse</b>">Inverse pill button&lt;/button>
+&lt;button class="<b>nq-button-pill inverse</b>">Inverse button&lt;/button>
+&lt;button class="<b>nq-button-pill light-blue inverse</b>">Light-blue button&lt;/button>
 &lt;button class="<b>nq-button-pill green inverse</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button-pill orange inverse</b>">Orange button&lt;/button>
-&lt;button class="<b>nq-button-pill red inverse</b>">Red button&lt;/button></div>
+&lt;button class="<b>nq-button-pill red inverse</b>">Red button&lt;/button>
+&lt;button class="<b>nq-button-pill gold inverse</b>">Gold button&lt;/button></div>
                 </div><!-- .nq-card -->
 
                 <div class="nq-card" id="inputs">
