Remove installation instructions from demo page and link to README instead

--- a/demo.html
+++ b/demo.html
@@ -250,24 +250,19 @@
                 </ul>
             </div>
 
-            <div id="installation">
-                <h2 class="nq-h2">Installation</h2>
-
-                <h3 class="nq-h3">Include via NPM</h3>
-                <div class="code">yarn add @nimiq/style</div>
-                <div class="code">@import 'node_modules/@nimiq/style/nimiq-style.min.css';</div>
-
-                <h3 class="nq-h3">Include via CDN</h3>
-                <div class="code">&lt;link href="<b>https://cdn.jsdelivr.net/npm/@nimiq/style@v0.7.3/nimiq-style.min.css</b>" rel="stylesheet"></div>
-
-                <h3 class="nq-h3">Font</h3>
-                <p class="nq-text">To use Nimiq's default 'Muli' font, include it from Google Fonts:</p>
-                <div class="code">&lt;link href="<b>https://fonts.googleapis.com/css?family=Muli:400,600,700</b>" rel="stylesheet"></div>
-                <p class="nq-text">To display account numbers in Nimiq's 'Fira Mono' font, include the subset from Google Fonts:</p>
-                <div class="code">&lt;link href="<b>https://fonts.googleapis.com/css?family=Fira+Mono&text=0123456789ABCDEFGHJKLMNPQRSTUVXY</b>" rel="stylesheet"></div>
-            </div>
-
             <div id="cards">
+                <div class="nq-card" id="installation">
+                    <div class="nq-card-header">
+                        <h1 class="nq-h1"><a href="#installation">Installation</a></h1>
+                    </div>
+                    <div class="nq-card-body">
+                        <p class="nq-text">
+                            Please see this section in the README:<br>
+                            <a href="https://nimiq.github.io/nimiq-style/#add-nimiq-style-css-to-your-project" class="nq-link">Add Nimiq Style CSS to your project</a>
+                        </p>
+                    </div>
+                </div>
+
                 <div class="nq-card" id="typography">
                     <div class="nq-card-header">
                         <h1 class="nq-h1"><a href="#typography">Typography</a></h1>
