Add checkmark-small icon

--- a/demo.html
+++ b/demo.html
@@ -633,7 +633,6 @@
                         <div class="hint" aria-label="nq-arrow-left-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left-small"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-caret-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-caret-right-small"/></svg></div>
-                        <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
                         <br/>
@@ -643,6 +642,8 @@
                         <div class="hint" aria-label="nq-face-neutral"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-neutral"/></svg></div>
                         <div class="hint" aria-label="nq-face-sad"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-sad"/></svg></div>
                         <div class="hint" aria-label="nq-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-login"/></svg></div>
+                        <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
+                        <div class="hint" aria-label="nq-checkmark-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark-small"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
@@ -675,7 +676,6 @@
                         <div class="hint" aria-label="nq-arrow-left-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-left-small"/></svg></div>
                         <div class="hint" aria-label="nq-arrow-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-arrow-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-caret-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-caret-right-small"/></svg></div>
-                        <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
                         <br/>
@@ -685,6 +685,8 @@
                         <div class="hint" aria-label="nq-face-neutral"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-neutral"/></svg></div>
                         <div class="hint" aria-label="nq-face-sad"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-sad"/></svg></div>
                         <div class="hint" aria-label="nq-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-login"/></svg></div>
+                        <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
+                        <div class="hint" aria-label="nq-checkmark-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark-small"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
