Add cashlink icon and variants

--- a/demo.html
+++ b/demo.html
@@ -636,6 +636,10 @@
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
                         <br/>
+                        <div class="hint" aria-label="nq-cashlink"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink"/></svg></div>
+                        <div class="hint" aria-label="nq-cashlink-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink-small"/></svg></div>
+                        <div class="hint" aria-label="nq-cashlink-xsmall"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink-xsmall"/></svg></div>
+                        <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
                         <div class="hint" aria-label="nq-plus-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-plus-circle"/></svg></div>
@@ -678,6 +682,10 @@
                         <div class="hint" aria-label="nq-caret-right-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-caret-right-small"/></svg></div>
                         <div class="hint" aria-label="nq-download"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-download"/></svg></div>
                         <div class="hint" aria-label="nq-transfer"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-transfer"/></svg></div>
+                        <br/>
+                        <div class="hint" aria-label="nq-cashlink"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink"/></svg></div>
+                        <div class="hint" aria-label="nq-cashlink-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink-small"/></svg></div>
+                        <div class="hint" aria-label="nq-cashlink-xsmall"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cashlink-xsmall"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
