Add stopwatch icon

--- a/demo.html
+++ b/demo.html
@@ -651,6 +651,7 @@
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
+                        <div class="hint" aria-label="nq-stopwatch"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-stopwatch"/></svg></div>
                         <div class="hint" aria-label="nq-contacts"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-contacts"/></svg></div>
                         <div class="hint" aria-label="nq-fire"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-fire"/></svg></div>
                         <div class="hint" aria-label="nq-skull"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-skull"/></svg></div>
@@ -698,6 +699,7 @@
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
+                        <div class="hint" aria-label="nq-stopwatch"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-stopwatch"/></svg></div>
                         <div class="hint" aria-label="nq-contacts"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-contacts"/></svg></div>
                         <div class="hint" aria-label="nq-fire"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-fire"/></svg></div>
                         <div class="hint" aria-label="nq-skull"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-skull"/></svg></div>
