Add under-payment icon

--- a/demo.html
+++ b/demo.html
@@ -661,13 +661,14 @@
                         <br/>
                         <div class="hint" aria-label="nq-keys"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-keys"/></svg></div>
                         <div class="hint" aria-label="nq-browser-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-browser-login"/></svg></div>
+                        <div class="hint" aria-label="nq-under-payment"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-under-payment"/></svg></div>
                         <div class="hint" aria-label="nq-copy"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-copy"/></svg></div>
                         <div class="hint" aria-label="nq-paper-edit"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-paper-edit"/></svg></div>
                         <div class="hint" aria-label="nq-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-scan-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-scan-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-shredder"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-shredder"/></svg></div>
-                        <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
+                        <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
                         <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
                         <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
@@ -709,13 +710,14 @@
                         <br/>
                         <div class="hint" aria-label="nq-keys"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-keys"/></svg></div>
                         <div class="hint" aria-label="nq-browser-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-browser-login"/></svg></div>
+                        <div class="hint" aria-label="nq-under-payment"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-under-payment"/></svg></div>
                         <div class="hint" aria-label="nq-copy"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-copy"/></svg></div>
                         <div class="hint" aria-label="nq-paper-edit"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-paper-edit"/></svg></div>
                         <div class="hint" aria-label="nq-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-scan-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-scan-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-shredder"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-shredder"/></svg></div>
-                        <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <br/>
+                        <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
                         <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
                         <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
