Add Cross and InfoCircleSmall icons

--- a/demo.html
+++ b/demo.html
@@ -642,12 +642,15 @@
                         <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
+                        <div class="hint" aria-label="nq-info-circle-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle-small"/></svg></div>
                         <div class="hint" aria-label="nq-plus-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-plus-circle"/></svg></div>
                         <div class="hint" aria-label="nq-face-neutral"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-neutral"/></svg></div>
                         <div class="hint" aria-label="nq-face-sad"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-sad"/></svg></div>
                         <div class="hint" aria-label="nq-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-login"/></svg></div>
+                        <br/>
                         <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-checkmark-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark-small"/></svg></div>
+                        <div class="hint" aria-label="nq-cross"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cross"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
@@ -685,12 +688,15 @@
                         <br/>
                         <div class="hint" aria-label="nq-close"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-close"/></svg></div>
                         <div class="hint" aria-label="nq-info-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle"/></svg></div>
+                        <div class="hint" aria-label="nq-info-circle-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-info-circle-small"/></svg></div>
                         <div class="hint" aria-label="nq-plus-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-plus-circle"/></svg></div>
                         <div class="hint" aria-label="nq-face-neutral"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-neutral"/></svg></div>
                         <div class="hint" aria-label="nq-face-sad"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-face-sad"/></svg></div>
                         <div class="hint" aria-label="nq-login"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-login"/></svg></div>
+                        <br/>
                         <div class="hint" aria-label="nq-checkmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark"/></svg></div>
                         <div class="hint" aria-label="nq-checkmark-small"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-checkmark-small"/></svg></div>
+                        <div class="hint" aria-label="nq-cross"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-cross"/></svg></div>
                         <br/>
                         <div class="hint" aria-label="nq-lock-locked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-locked"/></svg></div>
                         <div class="hint" aria-label="nq-lock-unlocked"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-lock-unlocked"/></svg></div>
