Remove text color adaption for unused backgrounds

--- a/demo.html
+++ b/demo.html
@@ -362,22 +362,6 @@
                         <div class="color-swatch nq-red-bg">
                             Red<br><br><br>
                         </div>
-
-                        <div class="color-swatch nq-purple-bg">
-                            Purple<br><br><br>
-                        </div>
-
-                        <div class="color-swatch nq-pink-bg">
-                            Pink<br><br><br>
-                        </div>
-
-                        <div class="color-swatch nq-light-green-bg">
-                            Light-Green<br><br><br>
-                        </div>
-
-                        <div class="color-swatch nq-brown-bg">
-                            Brown<br><br><br>
-                        </div>
                     </div>
 
                     <div class="code">&lt;div class="<b>nq-blue-bg</b>">Blue&lt;/div>
@@ -385,11 +369,7 @@
 &lt;div class="<b>nq-gold-bg</b>">Gold&lt;/div>
 &lt;div class="<b>nq-green-bg</b>">Green&lt;/div>
 &lt;div class="<b>nq-orange-bg</b>">Orange&lt;/div>
-&lt;div class="<b>nq-red-bg</b>">Red&lt;/div>
-&lt;div class="<b>nq-purple-bg</b>">Purple&lt;/div>
-&lt;div class="<b>nq-pink-bg</b>">Pink&lt;/div>
-&lt;div class="<b>nq-light-green-bg</b>">Light-Green&lt;/div>
-&lt;div class="<b>nq-brown-bg</b>">Brown&lt;/div></div>
+&lt;div class="<b>nq-red-bg</b>">Red&lt;/div></div>
                 </div>
 
                 <div class="nq-card" id="primary-buttons">
